Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3121

Seeing garbage SPDY responses sometimes

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 5.0.1
    • 5.2.0
    • SPDY
    • None

    Description

      Seeing some HTTP/0.9 version garbage responses with status=0 from SPDY sometimes. In some error cases, when http layer cleans up itself and sends a FETCH ERROR to the SPDY layer and SPDY layer seems to build a SYN_REPLY with garbage HTTP headers. Adding a simple protection to prevent this.

      Attachments

        Activity

          People

            sudheerv Sudheer Vinukonda
            sudheerv Sudheer Vinukonda
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment