[TS-3121] - Prevent sending garbage HTTP/0.9 responses from SPDY