proxy/spdy/SpdyClientSession.cc
@@ -363,6 +363,11 @@ spdy_process_fetch_header(TSEvent /*event*/, SpdyClientSession *sm, TSFetchSM fe
   SpdyRequest *req = (SpdyRequest *)TSFetchUserDataGet(fetch_sm);
 
   SpdyNV spdy_nv(fetch_sm);
+ 
+  if (spdy_nv.is_valid_response()) {
+    Debug("spdy_error", "----spdy_process_fetch_header, invalid http response");
+    return -1;
+  }
 
   Debug("spdy", "----spdylay_submit_syn_reply");
   if (sm->session) {
